--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,19 @@
         android:layout_height="wrap_content"
         android:text="Notify"
         />
+    <Button android:id="@+id/BigTextNotify"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BigTextNotify"
+        android:layout_below="@id/notify"/>
+    <Button android:id="@+id/BigImageNotify"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BigImageNotify"
+        android:layout_below="@id/BigTextNotify"/>
+    <Button android:id="@+id/InboxStyleNotify"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="InboxStyleNotify"
+        android:layout_below="@id/BigImageNotify"/>
 </RelativeLayout>
